src/objects/Commission__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this commission value active?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Firm__c</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Rep_Records__c</fullName>
        <label>Primary Rep - Records</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Rep_Reporting__c</fullName>
        <label>Primary Rep - Reporting</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>primary_rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Rep_Records__c</fullName>
        <label>Secondary Rep - Records</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Rep_Reporting__c</fullName>
        <label>Secondary Rep - Reporting</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>secondary_rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tertiary_Rep_Records__c</fullName>
        <label>Tertiary Rep - Records</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tertiary_Rep_Reporting__c</fullName>
        <label>Tertiary Rep - Reporting</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tertiary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tertiary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <label>Unique Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Commission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_Code__c</columns>
        <columns>Primary_Rep__c</columns>
        <columns>Secondary_Rep__c</columns>
        <columns>Primary_Rep_Reporting__c</columns>
        <columns>Secondary_Rep_Reporting__c</columns>
        <columns>Primary_Rep_Records__c</columns>
        <columns>Secondary_Rep_Records__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>